# yolov8_ByteTrack_TensorRT

./: BYTETracker.cpp  CMakeLists.txt  README.md  main.cpp
include/: common.hpp  dataType.h  yolov8.hpp
